# SimplicialDepth

./: README.txt
Ciphertext/Precomp_n/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dataset.txt  howtocompile  precomp_n  precomp_n.cpp
Ciphertext/Precomp_y/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  precomp_y  precomp_y.cpp  query.txt
Plaintext/: Dataset.txt  Theta.txt  twoD.java  vector.java
